# aws-google-auth

./: .gitignore  pyproject.toml
aws_google_auth/: __init__.py  amazon.py  configuration.py  google.py  util.py
tests/: test_amazon.py  test_backwards_compatibility.py  test_config_parser.py  test_configuration.py  test_configuration_persistence.py  test_init.py
