[tool.poetry]
name = "aws-google-auth"
version = "0.0.1"
description = "Provides AWS STS credentials based on Google Apps SAML SSO auth"
authors = ["Wei-N-Ning <macgnw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "4.10.0"
pylint = "2.12.2"
mypy = "0.931"
yapf = "0.32.0"
filelock = "3.6.0"
keyring = "23.5.0"
lxml = "4.8.0"
Pillow = "9.0.1"
requests = "2.27.1"
six = "1.16.0"
tabulate = "0.8.9"
tzlocal = "4.1"

[tool.poetry.dev-dependencies]
pytest = "7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
  "build/**/*.py",
  "dist/*.py",
  ".venv/*.py",
  ".pytest_cache/**/*.py",
]
